--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install pandas requests
-
+           pip install pandas requests pytz
       - name: Run bot
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
